--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -71,22 +71,32 @@
   </div>
 </div>
 
-<div class="media">
-  <div class="media-body">
-    <p class="media-heading">
-      <strong>Towards Real World Human Parsing: Multiple-Human Parsing in the Wild</strong><br />
-       Jianshu Li, Jian Zhao, <strong>Yunchao Wei</strong>, Congyan Lang, Yidong Li, Jiashi Feng<br />
-      <a href="https://arxiv.org/pdf/1705.07206.pdf">[arxiv]</a>
-    </p>
-  </div>
-</div>
-
 
 <h4>
 	<a name='2020'></a> 2020
 </h4>
 
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Meta Parsing Networks: Towards Generalized Few-shot Scene Parsing with Adaptive Metric Learning</strong><br />
+      Peike Li, <strong>Yunchao Wei</strong>, Yi Yang<br />
+      ACM Multimedia (<strong>MM</strong>), 2020
+    </p>
+  </div>
+</div>
 
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>University-1652: A Multi-view Multi-source Benchmark for Drone-based Geo-localization</strong><br />
+      Zhedong Zheng, <strong>Yunchao Wei</strong>, Yi Yang<br />
+      ACM Multimedia (<strong>MM</strong>), 2020
+      <a href="https://arxiv.org/abs/2002.12186">[arxiv]</a><a href="https://github.com/layumi/University1652-Baseline">[Project]</a><br />
+	    <strong>Note:</strong><a style="color:#FF0000;"> We annotate 1652 buildings in 72 universities around the world.</a>
+    </p>
+  </div>
+</div>
 
 <div class="media">
   <div class="media-body">
@@ -94,7 +104,9 @@
       <strong>Collaborative Video Object Segmentation by Foreground-Background Integration</strong><br />
       Zongxin Yang, <strong>Yunchao Wei</strong>, Yi Yang<br />
       European Conference on Computer Vision (<strong>ECCV</strong>), 2020 (<strong>spotlight</strong>)<br />
-      <a href="https://arxiv.org/pdf/2003.08333.pdf">[arxiv]</a><br />
+      <a href="https://arxiv.org/pdf/2003.08333.pdf">[arxiv]</a><br /><a href="https://github.com/z-x-yang/CFBI">[Code]</a>
+	    <a href="https://www.youtube.com/watch?v=xdHi68UFt50">[Youtube]</a><a href="https://www.bilibili.com/video/BV1o5411h7nw">[Bilibili]</a>
+	    
 	    <strong>Note:</strong><a style="color:#FF0000;"> Achieve the state of the art performance on DAVIS 2016, 2017 and Youtube-VOS.</a>
     </p>
   </div>
@@ -120,6 +132,14 @@
   </div>
 </div>
 
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Multi-Human Parsing With a Graph-based Generative Adversarial Model</strong><br />
+       Jianshu Li, Jian Zhao, Congyan Lang, Yidong Li, <strong>Yunchao Wei</strong>, Gudong Guo, Terence Sim, Shuicheng Yan, Jiashi Feng<br />
+    </p>
+  </div>
+</div>
 
 <div class="media">
   <div class="media-body">
