--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,17 +9,6 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
-      <strong>University-1652: A Multi-view Multi-source Benchmark for Drone-based Geo-localization</strong><br />
-      Zhedong Zheng, <strong>Yunchao Wei</strong>, Yi Yang<br />
-      <a href="https://arxiv.org/abs/2002.12186">[arxiv]</a><a href="https://github.com/layumi/University1652-Baseline">[Project]</a><br />
-	    <strong>Note:</strong><a style="color:#FF0000;"> We annotate 1652 buildings in 72 universities around the world.</a>
-    </p>
-  </div>
-</div>
-
-<div class="media">
-  <div class="media-body">
-    <p class="media-heading">
       <strong>AlignSeg: Feature-Aligned Segmentation Networks</strong><br />
       Zilong Huang, <strong>Yunchao Wei</strong>, Xinggang Wang, Honghui Shi, Wenyu Liu, Thomas S. Huang<br />
       <a href="https://arxiv.org/abs/2003.00872">[arxiv]</a><br />
@@ -104,9 +93,8 @@
       <strong>Collaborative Video Object Segmentation by Foreground-Background Integration</strong><br />
       Zongxin Yang, <strong>Yunchao Wei</strong>, Yi Yang<br />
       European Conference on Computer Vision (<strong>ECCV</strong>), 2020 (<strong>spotlight</strong>)<br />
-      <a href="https://arxiv.org/pdf/2003.08333.pdf">[arxiv]</a><br /><a href="https://github.com/z-x-yang/CFBI">[Code]</a>
-	    <a href="https://www.youtube.com/watch?v=xdHi68UFt50">[Youtube]</a><a href="https://www.bilibili.com/video/BV1o5411h7nw">[Bilibili]</a>
-	    
+      <a href="https://arxiv.org/pdf/2003.08333.pdf">[arxiv]</a><a href="https://github.com/z-x-yang/CFBI">[Code]</a>
+	    <a href="https://www.youtube.com/watch?v=xdHi68UFt50">[Youtube]</a><a href="https://www.bilibili.com/video/BV1o5411h7nw">[Bilibili]</a><br />
 	    <strong>Note:</strong><a style="color:#FF0000;"> Achieve the state of the art performance on DAVIS 2016, 2017 and Youtube-VOS.</a>
     </p>
   </div>
