--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -70,7 +70,7 @@
     <p class="media-heading">
       <strong>Meta Parsing Networks: Towards Generalized Few-shot Scene Parsing with Adaptive Metric Learning</strong><br />
       Peike Li, <strong>Yunchao Wei</strong>, Yi Yang<br />
-      ACM Multimedia (<strong>MM</strong>), 2020
+      ACM Multimedia (<strong>MM</strong>), 2020 <br />
     </p>
   </div>
 </div>
@@ -80,7 +80,7 @@
     <p class="media-heading">
       <strong>University-1652: A Multi-view Multi-source Benchmark for Drone-based Geo-localization</strong><br />
       Zhedong Zheng, <strong>Yunchao Wei</strong>, Yi Yang<br />
-      ACM Multimedia (<strong>MM</strong>), 2020
+      ACM Multimedia (<strong>MM</strong>), 2020 <br />
       <a href="https://arxiv.org/abs/2002.12186">[arxiv]</a><a href="https://github.com/layumi/University1652-Baseline">[Project]</a><br />
 	    <strong>Note:</strong><a style="color:#FF0000;"> We annotate 1652 buildings in 72 universities around the world.</a>
     </p>
