--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -125,6 +125,7 @@
     <p class="media-heading">
       <strong>Multi-Human Parsing With a Graph-based Generative Adversarial Model</strong><br />
        Jianshu Li, Jian Zhao, Congyan Lang, Yidong Li, <strong>Yunchao Wei</strong>, Gudong Guo, Terence Sim, Shuicheng Yan, Jiashi Feng<br />
+       ACM Transactions on Multimedia Computing, Communications, and Applications (<strong>TOMM</strong>), 2020<br />
     </p>
   </div>
 </div>
