--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,6 +3,8 @@
 	<h3> News</h3>
 	<ul>
 		  <li><i class="fa fa-flag"  color="#FF0000"
+		  aria-hidden="true"></i>The slides of <a href="assets/pdf/Wiztalk-魏云超-20200728.pptx">Data-Efficient Image and Video Segmentation</a> at Tencent Wiztalk is avaliable now!</li>
+		  <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>We release <strong>University-1652</strong>, a multi-view multi-source benchmark for drone-based geo-localization <a href="https://github.com/layumi/University1652-Baseline">[link]</a>.</li>
 		  <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>We release <strong>Agriculture-Vision</strong>, the first large-scale aerial farmland image dataset for semantic segmentation of agricultural patterns <a href="https://www.agriculture-vision.com/dataset">[link]</a>.</li>
