--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,6 +9,27 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>Sketch-Guided Scenery Image Outpainting</strong><br />
+      Yaxiong Wang, <strong>Yunchao Wei</strong>, Xueming Qian, Li Zhu, Yi Yang<br />
+      <a href="https://arxiv.org/abs/2006.09788">[arxiv]</a><br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Rethinking Localization Map: Towards Accurate Object Perception with Self-Enhancement Maps</strong><br />
+      Xiaolin Zhang, <strong>Yunchao Wei</strong>, Yi Yang, Fei Wu<br />
+      <a href="https://arxiv.org/abs/2006.05220">[arxiv]</a><br />
+      <strong>Note:</strong><a style="color:#FF0000;"> Propose new evalutation metrics for weakly supervised object localization.</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>AlignSeg: Feature-Aligned Segmentation Networks</strong><br />
       Zilong Huang, <strong>Yunchao Wei</strong>, Xinggang Wang, Honghui Shi, Wenyu Liu, Thomas S. Huang<br />
       <a href="https://arxiv.org/abs/2003.00872">[arxiv]</a><br />
