--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -89,6 +89,18 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>VehicleNet: Learning Robust Feature Representation for Vehicle Re-identification</strong><br />
+      Zhedong Zheng,  Tao Ruan, <strong>Yunchao Wei</strong>, Yi Yang, Tao Mei<br />
+      IEEE Transactions on Multimedia (<strong>TMM</strong>), 2020 <br />
+      <a href="https://github.com/layumi/AICIty-reID-2020">[Project]</a><br />
+	    <strong>Note:</strong><a style="color:#FF0000;"> The winner solution of the AICity Challenge 2020 Re-ID track.</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>Meta Parsing Networks: Towards Generalized Few-shot Scene Parsing with Adaptive Metric Learning</strong><br />
       Peike Li, <strong>Yunchao Wei</strong>, Yi Yang<br />
       ACM Multimedia (<strong>MM</strong>), 2020 <br />
