--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -93,7 +93,7 @@
       Zhedong Zheng,  Tao Ruan, <strong>Yunchao Wei</strong>, Yi Yang, Tao Mei<br />
       IEEE Transactions on Multimedia (<strong>TMM</strong>), 2020 <br />
       <a href="https://github.com/layumi/AICIty-reID-2020">[Project]</a><br />
-	    <strong>Note:</strong><a style="color:#FF0000;"> The winner solution of the AICity Challenge 2020 Re-ID track.</a>
+	    <strong>Note:</strong><a style="color:#FF0000;"> The winner solution of the Re-ID Track in AICity Challenge 2020.</a>
     </p>
   </div>
 </div>
