--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -43,7 +43,7 @@
       <strong>Self-Correction for Human Parsing</strong><br />
       Peike Li, Yunqiu Xu, <strong>Yunchao Wei</strong>, Yi Yang<br />
       <a href="https://arxiv.org/pdf/1910.09777.pdf">[arxiv]</a><a href="https://github.com/PeikeLi/Self-Correction-Human-Parsing">[CODE]</a><br />
-	    <strong>Note:</strong><a style="color:#FF0000;"> Our latest progress on human parsing won the 1st place of the 3rd LIP Challenge in CVPR 2019.</a>
+	    <strong>Note:</strong><span style="color:#FF0000;"> Our latest progress on human parsing won the 1st place of the 3rd LIP Challenge in CVPR 2019.</span>
     </p>
   </div>
 </div>
