--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -22,7 +22,7 @@
       <strong>Rethinking Localization Map: Towards Accurate Object Perception with Self-Enhancement Maps</strong><br />
       Xiaolin Zhang, <strong>Yunchao Wei</strong>, Yi Yang, Fei Wu<br />
       <a href="https://arxiv.org/abs/2006.05220">[arxiv]</a><br />
-      <strong>Note:</strong><a style="color:#FF0000;"> Propose new evalutation metrics for weakly supervised object localization.</a>
+      <strong>Note:</strong><span style="color:#FF0000;"> Propose new evalutation metrics for weakly supervised object localization.</span>
     </p>
   </div>
 </div>
@@ -55,7 +55,7 @@
       Zilong Huang, <strong>Yunchao Wei</strong>, Xinggang Wang, Wenyu Liu<br />
       <a href="assets/pdf/toolbox.pdf">[PDF]</a>
 			<a href="https://github.com/speedinghzl/pytorch-segmentation-toolbox">[CODE]</a><br />
-			<strong>Note:</strong><a style="color:#FF0000;"> We provide PyTorch implementations for DeeplabV3 and PSPNet. The advantages: 1) integrate Syn BN; 2) take less time and computational resources for training; 3) achieve better performance.</a>
+			<strong>Note:</strong><span style="color:#FF0000;"> We provide PyTorch implementations for DeeplabV3 and PSPNet. The advantages: 1) integrate Syn BN; 2) take less time and computational resources for training; 3) achieve better performance.</span></a>
     </p>
   </div>
 </div>
@@ -93,7 +93,7 @@
       Zhedong Zheng,  Tao Ruan, <strong>Yunchao Wei</strong>, Yi Yang, Tao Mei<br />
       IEEE Transactions on Multimedia (<strong>TMM</strong>), 2020 <br />
       <a href="https://github.com/layumi/AICIty-reID-2020">[Project]</a><br />
-	    <strong>Note:</strong><a style="color:#FF0000;"> The winner solution of the Re-ID Track in AICity Challenge 2020.</a>
+	    <strong>Note:</strong><span style="color:#FF0000;"> The winner solution of the Re-ID Track in AICity Challenge 2020.</span>
     </p>
   </div>
 </div>
@@ -115,7 +115,7 @@
       Zhedong Zheng, <strong>Yunchao Wei</strong>, Yi Yang<br />
       ACM Multimedia (<strong>MM</strong>), 2020 <br />
       <a href="https://arxiv.org/abs/2002.12186">[arxiv]</a><a href="https://github.com/layumi/University1652-Baseline">[Project]</a><br />
-	    <strong>Note:</strong><a style="color:#FF0000;"> We annotate 1652 buildings in 72 universities around the world.</a>
+	    <strong>Note:</strong><span style="color:#FF0000;"> We annotate 1652 buildings in 72 universities around the world.</span>
     </p>
   </div>
 </div>
@@ -125,10 +125,10 @@
     <p class="media-heading">
       <strong>Collaborative Video Object Segmentation by Foreground-Background Integration</strong><br />
       Zongxin Yang, <strong>Yunchao Wei</strong>, Yi Yang<br />
-      European Conference on Computer Vision (<strong>ECCV</strong>), 2020 (<strong>spotlight</strong>)<br />
+      European Conference on Computer Vision (<strong>ECCV</strong>), 2020 (<span style="color:#229954;"> <strong>spotlight</strong>)</span><br />
       <a href="https://arxiv.org/pdf/2003.08333.pdf">[arxiv]</a><a href="https://github.com/z-x-yang/CFBI">[Code]</a>
 	    <a href="https://www.youtube.com/watch?v=xdHi68UFt50">[Youtube]</a><a href="https://www.bilibili.com/video/BV1o5411h7nw">[Bilibili]</a><br />
-	    <strong>Note:</strong><a style="color:#FF0000;"> Achieve the state of the art performance on DAVIS 2016, 2017 and Youtube-VOS.</a>
+	    <strong>Note:</strong><span style="color:#FF0000;"> Achieve the state of the art performance on DAVIS 2016, 2017 and Youtube-VOS.</span>
     </p>
   </div>
 </div>
@@ -395,7 +395,7 @@
 			Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2019 <br />
       <a href="https://arxiv.org/pdf/1809.05996">[arxiv]</a>
 			<a href="https://github.com/liutinglt/CE2P">[CODE]</a><br />
-			<strong>Note:</strong><a style="color:#FF0000;"> This work achieves the 1st places on all human paring tracks in the 2nd LIP Challenge</a>
+			<strong>Note:</strong><span style="color:#FF0000;"> This work achieves the 1st places on all human paring tracks in the 2nd LIP Challenge</span>
     </p>
   </div>
 </div>
@@ -538,7 +538,7 @@
 			 IEEE Transactions on Multimedia (<strong>TMM</strong>), 2018<br />
       <a href="https://arxiv.org/abs/1708.05595">[PDF]</a>
 			<a href="https://github.com/huaxinxiao/SaliencyDetection">[CODE]</a>
-			<strong>Note:</strong><a style="color:#FF0000;"> This work provides the state-of-the-art solution for saliency object detection.</a>
+			<strong>Note:</strong><span style="color:#FF0000;"> This work provides the state-of-the-art solution for saliency object detection.</span>
     </p>
   </div>
 </div>
