--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -89,6 +89,26 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>Pixel-Level Cycle Association: A New Perspective for Domain Adaptive Semantic Segmentation</strong><br />
+      Guoliang Kang, <strong>Yunchao Wei</strong>, Yi Yang, Alex Hauptmann<br />
+      Neural Information Processing Systems (<strong>NeurIPS</strong>), 2020 (<span style="color:#229954;"> <strong>oral</strong></span>)<br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Consistent Structural Relation Learning for Generalized Zero-Shot Segmentation</strong><br />
+      Peike Li, <strong>Yunchao Wei</strong>, Yi Yang<br />
+      Neural Information Processing Systems (<strong>NeurIPS</strong>), 2020 (<span style="color:#229954;"> <strong>spotlight</strong></span>)<br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>VehicleNet: Learning Robust Feature Representation for Vehicle Re-identification</strong><br />
       Zhedong Zheng,  Tao Ruan, <strong>Yunchao Wei</strong>, Yi Yang, Tao Mei<br />
       IEEE Transactions on Multimedia (<strong>TMM</strong>), 2020 <br />
@@ -103,7 +123,7 @@
     <p class="media-heading">
       <strong>Meta Parsing Networks: Towards Generalized Few-shot Scene Parsing with Adaptive Metric Learning</strong><br />
       Peike Li, <strong>Yunchao Wei</strong>, Yi Yang<br />
-      ACM Multimedia (<strong>MM</strong>), 2020 <br />
+      ACM Multimedia (<strong>MM</strong>), 2020 (<span style="color:#229954;"> <strong>oral</strong></span>)<br />
     </p>
   </div>
 </div>
@@ -125,7 +145,7 @@
     <p class="media-heading">
       <strong>Collaborative Video Object Segmentation by Foreground-Background Integration</strong><br />
       Zongxin Yang, <strong>Yunchao Wei</strong>, Yi Yang<br />
-      European Conference on Computer Vision (<strong>ECCV</strong>), 2020 (<span style="color:#229954;"> <strong>spotlight</strong>)</span><br />
+      European Conference on Computer Vision (<strong>ECCV</strong>), 2020 (<span style="color:#229954;"> <strong>spotlight</strong></span>)<br />
       <a href="https://arxiv.org/pdf/2003.08333.pdf">[arxiv]</a><a href="https://github.com/z-x-yang/CFBI">[Code]</a>
 	    <a href="https://www.youtube.com/watch?v=xdHi68UFt50">[Youtube]</a><a href="https://www.bilibili.com/video/BV1o5411h7nw">[Bilibili]</a><br />
 	    <strong>Note:</strong><span style="color:#FF0000;"> Achieve the state of the art performance on DAVIS 2016, 2017 and Youtube-VOS.</span>
@@ -191,7 +211,7 @@
     <p class="media-heading">
       <strong>Interactive Object Segmentation with Inside-Outside Guidance</strong><br />
       Shiyin Zhang, Jun Hao Liew, <strong>Yunchao Wei</strong>, Shikui Wei, Yao Zhao<br />
-      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020 (<strong>oral</strong>)<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020 (<span style="color:#229954;"> <strong>oral</strong></span>)<br />
       <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Zhang_Interactive_Object_Segmentation_With_Inside-Outside_Guidance_CVPR_2020_paper.pdf">[PDF]</a>
 	    <a href="https://github.com/shiyinzhang/Inside-Outside-Guidance">[Code]</a>
 	    <a href="https://youtu.be/DevkxIo-hi8">[Youtube]</a><a href="https://www.bilibili.com/video/BV1Pf4y1R7w8/">[Bilibili]</a>
@@ -330,7 +350,7 @@
     <p class="media-heading">
       <strong>Self-similarity Grouping: A Simple Unsupervised Cross Domain Adaptation Approach for Person Re-identification</strong><br />
       Yang Fu, <strong>Yunchao Wei</strong>, Guanshuo Wang, Yuqian Zhou, Honghui Shi, Thomas Huang<br />
-			IEEE International Conference on Computer Vision (<strong>ICCV</strong>), 2019 (<strong>oral</strong>) <br />
+			IEEE International Conference on Computer Vision (<strong>ICCV</strong>), 2019 (<span style="color:#229954;"> <strong>oral</strong></span>) <br />
       <a href="https://arxiv.org/abs/1811.10144">[arxiv]</a>
 			<a href="https://github.com/OasisYang/SSG">[CODE]</a>
     </p>
@@ -499,7 +519,7 @@
     <p class="media-heading">
       <strong>Revisiting Dilated Convolution: A Simple Approach for Weakly- and Semi- Supervised Semantic Segmentation</strong><br />
        <strong>Yunchao Wei</strong>, Huaxin Xiao, Honghui Shi, Zequn Jie, Jiashi Feng, Thomas Huang<br />
-      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2018 (<strong>spotlight</strong>)<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2018 (<span style="color:#229954;"> <strong>spotlight</strong></span>)<br />
 			<a href="https://arxiv.org/abs/1805.04574">[PDF]</a>
 			<a href="assets/projects/mdc.html">[Project]</a>
 			<a href="assets/code/train_MDC.prototxt">[Prototxt]</a>
@@ -524,7 +544,7 @@
     <p class="media-heading">
       <strong>Left-Right Comparative Recurrent Model for Stereo Matching</strong><br />
        Zequn Jie, Pengfei Wang, Yonggen Ling, Bo Zhao, <strong>Yunchao Wei</strong>, Jiashi Feng, Wei Liu<br />
-      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2018 (<strong>oral</strong>)<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2018 (<span style="color:#229954;"> <strong>oral</strong></span>)<br />
       <a href="https://arxiv.org/abs/1804.00796">[PDF]</a>
    </p>
   </div>
@@ -597,7 +617,7 @@
       Ting Liu, <strong>Yunchao Wei</strong>, Yao Zhao, Si Liu, Shikui
       Wei<br />
       ACM Multimedia (<strong>MM</strong>), 2017
-      (<strong>oral</strong>)<br />
+      (<span style="color:#229954;"> <strong>oral</strong></span>)<br />
    </p>
   </div>
 </div>
@@ -621,7 +641,7 @@
        Classification to Semantic Segmentation Approach</strong><br />
        <strong>Yunchao Wei</strong>, Jiashi Feng, Xiaodan Liang,
       Ming-Ming Cheng, Yao Zhao, Shuicheng Yan<br />
-      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2017 (<strong>oral</strong>)<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2017 (<span style="color:#229954;"> <strong>oral</strong></span>)<br />
       <a href="https://arxiv.org/abs/1703.08448">[PDF]</a>
    </p>
   </div>
