--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -22,7 +22,7 @@
       <strong>Rethinking Localization Map: Towards Accurate Object Perception with Self-Enhancement Maps</strong><br />
       Xiaolin Zhang, <strong>Yunchao Wei</strong>, Yi Yang, Fei Wu<br />
       <a href="https://arxiv.org/abs/2006.05220">[arxiv]</a><br />
-      <span style="color:Gray;font-size:14px"><strong>Note:</strong> Propose new evalutation metrics for weakly supervised object localization.</span>
+      <span style="color:#85929E;font-size:14px"><strong>Note:</strong> Propose new evalutation metrics for weakly supervised object localization.</span>
     </p>
   </div>
 </div>
