--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -43,7 +43,7 @@
       <strong>Self-Correction for Human Parsing</strong><br />
       Peike Li, Yunqiu Xu, <strong>Yunchao Wei</strong>, Yi Yang<br />
       <a href="https://arxiv.org/pdf/1910.09777.pdf">[arxiv]</a><a href="https://github.com/PeikeLi/Self-Correction-Human-Parsing">[CODE]</a><br />
-	    <span style="color:Gray;font-size:14px"><strong>Note:</strong> Our latest progress on human parsing won the 1st place of the 3rd LIP Challenge in CVPR 2019.</span>
+	    <span style="color:#34495E;font-size:14px"><strong>Note:</strong> Our latest progress on human parsing won the 1st place of the 3rd LIP Challenge in CVPR 2019.</span>
     </p>
   </div>
 </div>
@@ -55,7 +55,7 @@
       Zilong Huang, <strong>Yunchao Wei</strong>, Xinggang Wang, Wenyu Liu<br />
       <a href="assets/pdf/toolbox.pdf">[PDF]</a>
 			<a href="https://github.com/speedinghzl/pytorch-segmentation-toolbox">[CODE]</a><br />
-			<span style="color:Gray;font-size:14px"><strong>Note:</strong> We provide PyTorch implementations for DeeplabV3 and PSPNet. The advantages: 1) integrate Syn BN; 2) take less time and computational resources for training; 3) achieve better performance.</span></a>
+			<span style="color:#34495E;font-size:14px"><strong>Note:</strong> We provide PyTorch implementations for DeeplabV3 and PSPNet. The advantages: 1) integrate Syn BN; 2) take less time and computational resources for training; 3) achieve better performance.</span></a>
     </p>
   </div>
 </div>
@@ -113,7 +113,7 @@
       Zhedong Zheng,  Tao Ruan, <strong>Yunchao Wei</strong>, Yi Yang, Tao Mei<br />
       IEEE Transactions on Multimedia (<strong>TMM</strong>), 2020 <br />
       <a href="https://github.com/layumi/AICIty-reID-2020">[Project]</a><br />
-	    <span style="color:Gray;font-size:14px"><strong>Note:</strong> The winner solution of the Re-ID Track in AICity Challenge 2020.</span>
+	    <span style="color:#34495E;font-size:14px"><strong>Note:</strong> The winner solution of the Re-ID Track in AICity Challenge 2020.</span>
     </p>
   </div>
 </div>
@@ -135,7 +135,7 @@
       Zhedong Zheng, <strong>Yunchao Wei</strong>, Yi Yang<br />
       ACM Multimedia (<strong>MM</strong>), 2020 <br />
       <a href="https://arxiv.org/abs/2002.12186">[arxiv]</a><a href="https://github.com/layumi/University1652-Baseline">[Project]</a><br />
-	    <span style="color:Gray;font-size:14px"><strong>Note:</strong> We annotate 1652 buildings in 72 universities around the world.</span>
+	    <span style="color:#34495E;font-size:14px"><strong>Note:</strong> We annotate 1652 buildings in 72 universities around the world.</span>
     </p>
   </div>
 </div>
@@ -148,7 +148,7 @@
       European Conference on Computer Vision (<strong>ECCV</strong>), 2020 (<span style="color:#229954;"><strong>spotlight</strong></span>)<br />
       <a href="https://arxiv.org/pdf/2003.08333.pdf">[arxiv]</a><a href="https://github.com/z-x-yang/CFBI">[Code]</a>
 	    <a href="https://www.youtube.com/watch?v=xdHi68UFt50">[Youtube]</a><a href="https://www.bilibili.com/video/BV1o5411h7nw">[Bilibili]</a><br />
-	    <span style="color:Gray;font-size:14px"><strong>Note:</strong> Achieve the state of the art performance on DAVIS 2016, 2017 and Youtube-VOS.</span>
+	    <span style="color:#34495E;font-size:14px"><strong>Note:</strong> Achieve the state of the art performance on DAVIS 2016, 2017 and Youtube-VOS.</span>
     </p>
   </div>
 </div>
@@ -415,7 +415,7 @@
 			Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2019 <br />
       <a href="https://arxiv.org/pdf/1809.05996">[arxiv]</a>
 			<a href="https://github.com/liutinglt/CE2P">[CODE]</a><br />
-			<span style="color:Gray;font-size:14px"><strong>Note:</strong> This work achieves the 1st places on all human paring tracks in the 2nd LIP Challenge</span>
+			<span style="color:#34495E;font-size:14px"><strong>Note:</strong> This work achieves the 1st places on all human paring tracks in the 2nd LIP Challenge</span>
     </p>
   </div>
 </div>
@@ -558,7 +558,7 @@
 			 IEEE Transactions on Multimedia (<strong>TMM</strong>), 2018<br />
       <a href="https://arxiv.org/abs/1708.05595">[PDF]</a>
 			<a href="https://github.com/huaxinxiao/SaliencyDetection">[CODE]</a>
-			<span style="color:Gray;font-size:14px"><strong>Note:</strong> This work provides the state-of-the-art solution for saliency object detection.</span>
+			<span style="color:#34495E;font-size:14px"><strong>Note:</strong> This work provides the state-of-the-art solution for saliency object detection.</span>
     </p>
   </div>
 </div>
