--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -90,7 +90,7 @@
   <div class="media-body">
     <p class="media-heading">
       <strong>Pixel-Level Cycle Association: A New Perspective for Domain Adaptive Semantic Segmentation</strong><br />
-      Guoliang Kang, <strong>Yunchao Wei</strong>, Yi Yang, Alex Hauptmann<br />
+      Guoliang Kang, <strong>Yunchao Wei</strong>, Yi Yang, Yueting Zhuang, Alex Hauptmann<br />
       Neural Information Processing Systems (<strong>NeurIPS</strong>), 2020 (<span style="color:#CB4335;"><strong>oral</strong></span>)<br />
     </p>
   </div>
