--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -86,11 +86,23 @@
 	<a name='2020'></a> 2020
 </h4>
 
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Contrastive Adaptation Network for Single- and Multi-Source Domain Adaptation</strong><br />
+      Guoliang Kang, Lu Jiang, <strong>Yunchao Wei</strong>, Yi Yang, Alexander G. Hauptmann<br />
+      IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2020 <br />
+      <a href="https://github.com/kgl-prml/Contrastive-Adaptation-Network-for-Unsupervised-Domain-Adaptation">[CODE]</a>
+    </p>
+  </div>
+</div>
+
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
       <strong>Pixel-Level Cycle Association: A New Perspective for Domain Adaptive Semantic Segmentation</strong><br />
-      Guoliang Kang, <strong>Yunchao Wei</strong>, Yi Yang, Yueting Zhuang, Alex Hauptmann<br />
+      Guoliang Kang, <strong>Yunchao Wei</strong>, Yi Yang, Yueting Zhuang, Alexander G. Hauptmann<br />
       Neural Information Processing Systems (<strong>NeurIPS</strong>), 2020 (<span style="color:#CB4335;"><strong>oral</strong></span>)<br />
     </p>
   </div>
