--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,7 +3,7 @@
 	<h3> News</h3>
 	<ul>
 		  <li><i class="fa fa-flag"  color="#FF0000"
-		  aria-hidden="true"></i>I was awarded as one of the five top early-career researchers in Engineering and Computer Sciences in Australia by <a href="https://specialreports.theaustralian.com.au/1540291/27">The Asutralian</a>.</li>
+		  aria-hidden="true"></i>I was awarded as one of the five top early-career researchers in Engineering and Computer Sciences in Australia by <a href="https://specialreports.theaustralian.com.au/1540291/27">The Australian</a>.</li>
 		  <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>The slides of <a href="assets/pdf/Wiztalk-魏云超-20200728.pptx">Data-Efficient Image and Video Segmentation</a> at Tencent Wiztalk is avaliable now!</li>
 		  <li><i class="fa fa-flag"  color="#FF0000"
