--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -424,7 +424,7 @@
     <p class="media-heading">
       <strong>Devil in the Details: Towards Accurate Single and Multiple Human Parsing</strong><br />
       Tao Ruan, Ting Liu, Zilong Huang, <strong>Yunchao Wei</strong>, Shikui Wei, Yao Zhao, Thomas Huang<br />
-			Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2019 <br />
+			Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2019 (<span style="color:#CB4335;"><strong>oral</strong></span>)<br />
       <a href="https://arxiv.org/pdf/1809.05996">[arxiv]</a>
 			<a href="https://github.com/liutinglt/CE2P">[CODE]</a><br />
 			<span style="color:#34495E;font-size:14px"><strong>Note:</strong> This work achieves the 1st places on all human paring tracks in the 2nd LIP Challenge</span>
