--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,6 +9,17 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>Collaborative Video Object Segmentation by Multi-Scale Foreground-Background Integration</strong><br />
+      Zongxin Yang, <strong>Yunchao Wei</strong>, Yi Yang<br />
+      <a href="https://arxiv.org/pdf/2010.06349.pdf">[arxiv]</a><a href="https://github.com/z-x-yang/CFBI">[Code]</a><br />
+	    <span style="color:#34495E;font-size:14px"><strong>Note:</strong> CFBI+: The enhanced version of our ECCV 2020 work. New SOTA solution on DAVIS 2016, 2017 and Youtube-VOS.</span>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>Sketch-Guided Scenery Image Outpainting</strong><br />
       Yaxiong Wang, <strong>Yunchao Wei</strong>, Xueming Qian, Li Zhu, Yi Yang<br />
       <a href="https://arxiv.org/abs/2006.09788">[arxiv]</a><br />
