--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -51,17 +51,6 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
-      <strong>Self-Correction for Human Parsing</strong><br />
-      Peike Li, Yunqiu Xu, <strong>Yunchao Wei</strong>, Yi Yang<br />
-      <a href="https://arxiv.org/pdf/1910.09777.pdf">[arxiv]</a><a href="https://github.com/PeikeLi/Self-Correction-Human-Parsing">[CODE]</a><br />
-	    <span style="color:#34495E;font-size:14px"><strong>Note:</strong> Our latest progress on human parsing won the 1st place of the 3rd LIP Challenge in CVPR 2019.</span>
-    </p>
-  </div>
-</div>
-
-<div class="media">
-  <div class="media-body">
-    <p class="media-heading">
       <strong>A PyTorch Semantic Segmentation Toolbox</strong><br />
       Zilong Huang, <strong>Yunchao Wei</strong>, Xinggang Wang, Wenyu Liu<br />
       <a href="assets/pdf/toolbox.pdf">[PDF]</a>
@@ -88,6 +77,23 @@
       Bowen Cheng, <strong>Yunchao Wei</strong>, Honghui Shi, Rogerio Feris, Jinjun Xiong, Thomas Huang<br />
       <a href="https://arxiv.org/abs/1810.04002">[arxiv]</a>
 			<a href="https://github.com/bowenc0221/Decoupled-Classification-Refinement">[CODE]</a>
+    </p>
+  </div>
+</div>
+
+<h4>
+	<a name='2021'></a> 2021
+</h4>
+
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Self-Correction for Human Parsing</strong><br />
+      Peike Li, Yunqiu Xu, <strong>Yunchao Wei</strong>, Yi Yang<br />
+      IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 <br />
+      <a href="https://arxiv.org/pdf/1910.09777.pdf">[arxiv]</a><a href="https://github.com/PeikeLi/Self-Correction-Human-Parsing">[CODE]</a><br />
+	    <span style="color:#34495E;font-size:14px"><strong>Note:</strong> Our latest progress on human parsing won the 1st place of the 3rd LIP Challenge in CVPR 2019.</span>
     </p>
   </div>
 </div>
