--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,6 +9,16 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>Delving Deep into Label Smoothing</strong><br />
+      Chang-Bin Zhang, Peng-Tao Jiang, Qibin Hou, <strong>Yunchao Wei</strong>, Qi Han, Zhen Li, Ming-Ming Cheng<br />
+      <a href="https://arxiv.org/pdf/2011.12562">[arxiv]</a><br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>Collaborative Video Object Segmentation by Multi-Scale Foreground-Background Integration</strong><br />
       Zongxin Yang, <strong>Yunchao Wei</strong>, Yi Yang<br />
       <a href="https://arxiv.org/pdf/2010.06349.pdf">[arxiv]</a><a href="https://github.com/z-x-yang/CFBI">[Code]</a><br />
