--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -30,16 +30,6 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
-      <strong>Sketch-Guided Scenery Image Outpainting</strong><br />
-      Yaxiong Wang, <strong>Yunchao Wei</strong>, Xueming Qian, Li Zhu, Yi Yang<br />
-      <a href="https://arxiv.org/abs/2006.09788">[arxiv]</a><br />
-    </p>
-  </div>
-</div>
-
-<div class="media">
-  <div class="media-body">
-    <p class="media-heading">
       <strong>Rethinking Localization Map: Towards Accurate Object Perception with Self-Enhancement Maps</strong><br />
       Xiaolin Zhang, <strong>Yunchao Wei</strong>, Yi Yang, Fei Wu<br />
       <a href="https://arxiv.org/abs/2006.05220">[arxiv]</a><br />
@@ -94,6 +84,17 @@
 <h4>
 	<a name='2021'></a> 2021
 </h4>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Sketch-Guided Scenery Image Outpainting</strong><br />
+      Yaxiong Wang, <strong>Yunchao Wei</strong>, Xueming Qian, Li Zhu, Yi Yang<br />
+	    IEEE Transactions on Image Processing (<strong>TIP</strong>), 2021 <br />
+      <a href="https://arxiv.org/abs/2006.09788">[arxiv]</a><br />
+    </p>
+  </div>
+</div>
 
 
 <div class="media">
