--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,6 +9,16 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>AINet: Association Implantation for Superpixel Segmentation</strong><br />
+      Yaxiong Wang, <strong>Yunchao Wei</strong>, Xueming Qian, Li Zhu, Yi Yang<br />
+      <a href="https://arxiv.org/abs/2101.10696">[arxiv]</a><br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>Delving Deep into Label Smoothing</strong><br />
       Chang-Bin Zhang, Peng-Tao Jiang, Qibin Hou, <strong>Yunchao Wei</strong>, Qi Han, Zhen Li, Ming-Ming Cheng<br />
       <a href="https://arxiv.org/pdf/2011.12562">[arxiv]</a><br />
