--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -51,16 +51,6 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
-      <strong>AlignSeg: Feature-Aligned Segmentation Networks</strong><br />
-      Zilong Huang, <strong>Yunchao Wei</strong>, Xinggang Wang, Honghui Shi, Wenyu Liu, Thomas S. Huang<br />
-      <a href="https://arxiv.org/abs/2003.00872">[arxiv]</a><br />
-    </p>
-  </div>
-</div>
-
-<div class="media">
-  <div class="media-body">
-    <p class="media-heading">
       <strong>A PyTorch Semantic Segmentation Toolbox</strong><br />
       Zilong Huang, <strong>Yunchao Wei</strong>, Xinggang Wang, Wenyu Liu<br />
       <a href="assets/pdf/toolbox.pdf">[PDF]</a>
@@ -94,6 +84,18 @@
 <h4>
 	<a name='2021'></a> 2021
 </h4>
+
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>AlignSeg: Feature-Aligned Segmentation Networks</strong><br />
+      Zilong Huang, <strong>Yunchao Wei</strong>, Xinggang Wang, Honghui Shi, Wenyu Liu, Thomas S. Huang<br />
+      IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 <br />
+      <a href="https://arxiv.org/abs/2003.00872">[arxiv]</a><br />
+    </p>
+  </div>
+</div>
 
 <div class="media">
   <div class="media-body">
