--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -26,16 +26,6 @@
   </div>
 </div>
 
-<div class="media">
-  <div class="media-body">
-    <p class="media-heading">
-      <strong>Collaborative Video Object Segmentation by Multi-Scale Foreground-Background Integration</strong><br />
-      Zongxin Yang, <strong>Yunchao Wei</strong>, Yi Yang<br />
-      <a href="https://arxiv.org/pdf/2010.06349.pdf">[arxiv]</a><a href="https://github.com/z-x-yang/CFBI">[Code]</a><br />
-	    <span style="color:#34495E;font-size:14px"><strong>Note:</strong> CFBI+: The enhanced version of our ECCV 2020 work. New SOTA solution on DAVIS 2016, 2017 and Youtube-VOS.</span>
-    </p>
-  </div>
-</div>
 
 <div class="media">
   <div class="media-body">
@@ -85,6 +75,39 @@
 	<a name='2021'></a> 2021
 </h4>
 
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Collaborative Video Object Segmentation by Multi-Scale Foreground-Background Integration</strong><br />
+      Zongxin Yang, <strong>Yunchao Wei</strong>, Yi Yang<br />
+      IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 <br />
+      <a href="https://arxiv.org/pdf/2010.06349.pdf">[arxiv]</a><a href="https://github.com/z-x-yang/CFBI">[Code]</a><br />
+	    <span style="color:#34495E;font-size:14px"><strong>Note:</strong> CFBI+: The enhanced version of our ECCV 2020 work. New SOTA solution on DAVIS 2016, 2017 and Youtube-VOS.</span>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>VSPW: A Large-scale Dataset for Video Scene Parsing in the Wild</strong><br />
+      Jiaxu Miao, <strong>Yunchao Wei</strong>, Yu Wu, Chen Liang, Guangrui Li, Yi Yang<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2021 <br />
+      <a href="https://www.vspwdataset.com/">[Project]</a><br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Domain Consensus Clustering for Universal Domain Adaptation</strong><br />
+      Guangrui Li, Guoliang Kang, Yi Zhu, <strong>Yunchao Wei</strong>, Yi Yang<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2021 <br />
+      <a href="http://reler.net/papers/guangrui_cvpr2021.pdf">[PDF]</a><br />	    
+    </p>
+  </div>
+</div>
 
 <div class="media">
   <div class="media-body">
