--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,6 +3,8 @@
 	<h3> News</h3>
 	<ul>
 		  <li><i class="fa fa-flag"  color="#FF0000"
+		  aria-hidden="true"></i>We will co-organize two CVPR 2021 Workshops on <a href="https://fvc-workshop.github.io/">Future Video Conferencing</a> and <a href="https://l2id.github.io/">Learning from Limited and Imperfect Data</a></li>
+		  <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>I was awarded as one of the five top early-career researchers in Engineering and Computer Sciences in Australia by <a href="https://specialreports.theaustralian.com.au/1540291/27">The Australian</a>.</li>
 		  <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>The slides of <a href="assets/pdf/Wiztalk-魏云超-20200728.pptx">Data-Efficient Image and Video Segmentation</a> at Tencent Wiztalk is avaliable now!</li>
