--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -78,6 +78,16 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>Cross-Modal Progressive Comprehension for Referring Segmentation</strong><br />
+      Si Liu, Tianrui Hui, Shaofei Huang, <strong>Yunchao Wei</strong>, Bo Li, Guanbin Li<br />
+      IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 <br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>Collaborative Video Object Segmentation by Multi-Scale Foreground-Background Integration</strong><br />
       Zongxin Yang, <strong>Yunchao Wei</strong>, Yi Yang<br />
       IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2021 <br />
